<resources>
    <string name="app_name">Registration</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>
    <string name="yay_you_registered">Yay you registered!</string>
    <string name="email_validation_message">Email address must be in correct format</string>
    <string name="password_validation_message">Password must be at least 4 alphanumeric characters</string>
    <string name="mandatory_field_validation_message">All fields must be filled</string>
    <string name="welcome_message">Welcome %s!</string>
    <string name="REGISTERED_USER">REGISTERED_USER</string>
</resources>
